# shinkuro

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  RUST_IMPLEMENTATION_COMPLETE.md  RUST_IMPLEMENTATION_GUIDE.md  pyproject.toml
.github/workflows/: publish.yml
rust-shinkuro/: COMPARISON.md  Cargo.toml  FILES_CREATED.txt  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MIGRATION.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  VERIFICATION_CHECKLIST.md  build.sh
rust-shinkuro/examples/prompts/: code-review.md  greeting.md  simple.md
rust-shinkuro/src/: cli.rs  file.rs  formatters.rs  git.rs  loader.rs  main.rs  mcp.rs  model.rs
scripts/: check_version.py
src/shinkuro/: __init__.py  config.py  file.py  formatters.py  interfaces.py  main.py  model.py  security.py  server.py
src/shinkuro/file/: load.py  scan.py
src/shinkuro/prompts/: markdown.py
src/shinkuro/remote/: git.py  utils.py
src/shinkuro/utils/: github.py
tests/: README.md  __init__.py  conftest.py  mocks.py  test_config.py  test_file.py  test_formatters.py  test_git.py  test_integration.py  test_loader.py  test_main.py  test_markdown.py  test_scan.py  test_security.py  test_server.py
