[project]
name = "shinkuro"
version = "0.1.0"
description = "Prompt management and synchronization MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.4",
    "python-frontmatter>=1.1.0",
]

[project.scripts]
shinkuro = "shinkuro.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "hatchling>=1.27.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "ruff>=0.13.2",
]
