[project]
name = "shinkuro"
version = "0.3.0"
description = "Prompt synchronization MCP server"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "DiscreteTom", email = "discrete_tom@outlook.com"},
]
license = {text = "MIT"}
keywords = ["mcp", "prompt", "model-context-protocol"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.12.4",
    "python-frontmatter>=1.1.0",
    "GitPython>=3.1.0",
    "giturlparse>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/DiscreteTom/shinkuro"
Repository = "https://github.com/DiscreteTom/shinkuro"
Issues = "https://github.com/DiscreteTom/shinkuro/issues"

[project.scripts]
shinkuro = "shinkuro.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.pre-commit-config.yaml",
  "/.python-version", 
  "/pyrightconfig.json",
  "/uv.lock"
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "hatchling>=1.27.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=shinkuro",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src/shinkuro"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
