[package]
name = "shinkuro"
version = "0.3.5"
edition = "2021"
authors = ["DiscreteTom <discrete_tom@outlook.com>"]
description = "Universal prompt loader MCP server"
license = "MIT"
keywords = ["mcp", "prompt", "model-context-protocol"]
repository = "https://github.com/DiscreteTom/shinkuro"

[[bin]]
name = "shinkuro"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# MCP Server
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Markdown parsing with frontmatter
yaml-front-matter = "0.1"
serde_yaml = "0.9"

# Git operations
git2 = "0.19"
url = "2.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex for template parsing
regex = "1.11"

# File system operations
walkdir = "2.5"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.15"
